--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 2.8.12)
 project(darknet_ros)
 
 # Set c++11 cmake flags
-set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
-set(CMAKE_C_FLAGS "-Wall -Wno-unused-result -Wno-unknown-pragmas -Wno-unused-variable -Wfatal-errors -fPIC ${CMAKE_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wno-unused-result -Wno-unknown-pragmas -Wno-unused-variable -fPIC -fpermissive ${CMAKE_CXX_FLAGS}")
 
 # Define path of darknet folder here.
 find_path(DARKNET_PATH
@@ -89,42 +88,43 @@ include_directories(
 )
 
 set(PROJECT_LIB_FILES
-    src/YoloObjectDetector.cpp                    src/image_interface.c
+    src/YoloObjectDetector.cpp                    src/image_interface.cpp
 )
 
 set(DARKNET_CORE_FILES
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/image.c
-    ${DARKNET_PATH}/src/avgpool_layer.c           ${DARKNET_PATH}/src/layer.c
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
-    ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/maxpool_layer.c
-    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/option_list.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/region_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/route_layer.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/upsample_layer.c          ${DARKNET_PATH}/src/logistic_layer.c
-    ${DARKNET_PATH}/src/l2norm_layer.c            ${DARKNET_PATH}/src/yolo_layer.c
+    ${DARKNET_PATH}/src/activation_layer.cpp      ${DARKNET_PATH}/src/activations.cpp
+    ${DARKNET_PATH}/src/avgpool_layer.cpp         ${DARKNET_PATH}/src/batchnorm_layer.cpp
+    ${DARKNET_PATH}/src/blas.cpp                  ${DARKNET_PATH}/src/box.cpp
+    ${DARKNET_PATH}/src/col2im.cpp                ${DARKNET_PATH}/src/connected_layer.cpp
+    ${DARKNET_PATH}/src/convolutional_layer.cpp   ${DARKNET_PATH}/src/cost_layer.cpp
+    ${DARKNET_PATH}/src/crnn_layer.cpp            ${DARKNET_PATH}/src/crop_layer.cpp
+    ${DARKNET_PATH}/src/cuda.cpp                  ${DARKNET_PATH}/src/data.cpp
+    ${DARKNET_PATH}/src/deconvolutional_layer.cpp ${DARKNET_PATH}/src/demo.cpp
+    ${DARKNET_PATH}/src/detection_layer.cpp       ${DARKNET_PATH}/src/dropout_layer.cpp
+    ${DARKNET_PATH}/src/gemm.cpp                  ${DARKNET_PATH}/src/gru_layer.cpp
+    ${DARKNET_PATH}/src/im2col.cpp                ${DARKNET_PATH}/src/image.cpp
+    ${DARKNET_PATH}/src/image_opencv.cpp          ${DARKNET_PATH}/src/iseg_layer.cpp
+    ${DARKNET_PATH}/src/l2norm_layer.cpp          ${DARKNET_PATH}/src/layer.cpp
+    ${DARKNET_PATH}/src/list.cpp                  ${DARKNET_PATH}/src/local_layer.cpp
+    ${DARKNET_PATH}/src/logistic_layer.cpp        ${DARKNET_PATH}/src/lstm_layer.cpp
+    ${DARKNET_PATH}/src/matrix.cpp                ${DARKNET_PATH}/src/maxpool_layer.cpp
+    ${DARKNET_PATH}/src/network.cpp               ${DARKNET_PATH}/src/normalization_layer.cpp
+    ${DARKNET_PATH}/src/option_list.cpp           ${DARKNET_PATH}/src/parser.cpp
+    ${DARKNET_PATH}/src/region_layer.cpp          ${DARKNET_PATH}/src/reorg_layer.cpp
+    ${DARKNET_PATH}/src/rnn_layer.cpp             ${DARKNET_PATH}/src/route_layer.cpp
+    ${DARKNET_PATH}/src/shortcut_layer.cpp        ${DARKNET_PATH}/src/softmax_layer.cpp
+    ${DARKNET_PATH}/src/tree.cpp                  ${DARKNET_PATH}/src/upsample_layer.cpp
+    ${DARKNET_PATH}/src/utils.cpp                 ${DARKNET_PATH}/src/yolo_layer.cpp
 
-    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
-    ${DARKNET_PATH}/examples/attention.c          ${DARKNET_PATH}/examples/nightmare.c
-    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/regressor.c
-    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn.c
-    ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
-    ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
-    ${DARKNET_PATH}/examples/darknet.c            ${DARKNET_PATH}/examples/tag.c
-    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/yolo.c
-    ${DARKNET_PATH}/examples/go.c
+    ${DARKNET_PATH}/examples/art.cpp              ${DARKNET_PATH}/examples/attention.cpp
+    ${DARKNET_PATH}/examples/captcha.cpp          ${DARKNET_PATH}/examples/cifar.cpp
+    ${DARKNET_PATH}/examples/classifier.cpp       ${DARKNET_PATH}/examples/coco.cpp
+    ${DARKNET_PATH}/examples/darknet.cpp          ${DARKNET_PATH}/examples/detector.cpp
+    ${DARKNET_PATH}/examples/go.cpp               ${DARKNET_PATH}/examples/instance_segmenter.cpp
+    ${DARKNET_PATH}/examples/lsd.cpp              ${DARKNET_PATH}/examples/nightmare.cpp
+    ${DARKNET_PATH}/examples/regressor.cpp        ${DARKNET_PATH}/examples/rnn.cpp
+    ${DARKNET_PATH}/examples/segmenter.cpp        ${DARKNET_PATH}/examples/super.cpp
+    ${DARKNET_PATH}/examples/tag.cpp              ${DARKNET_PATH}/examples/yolo.cpp
 )
 
 set(DARKNET_CUDA_FILES
@@ -169,10 +169,12 @@ else()
 
 endif()
 
+set_target_properties(${PROJECT_NAME}_lib PROPERTIES
+    LINKER_LANGUAGE CXX
+)
+
 target_link_libraries(${PROJECT_NAME}_lib
   m
-  pthread
-  stdc++
   ${Boost_LIBRARIES}
   ${OpenCV_LIBRARIES}
   ${catkin_LIBRARIES}
