--- a/darknet_ros/config/yolov2-voc.yaml
+++ b/darknet_ros/config/yolov2-voc.yaml
@@ -1,30 +1,32 @@
-yolo_model:
+darknet_ros:
+  ros__parameters:
+    yolo_model:
 
-  config_file:
-    name: yolov2-voc.cfg
-  weight_file:
-    name: yolov2-voc.weights
-  threshold:
-    value: 0.3
-  detection_classes:
-    names:
-      - aeroplane
-      - bicycle
-      - bird
-      - boat
-      - bottle
-      - bus
-      - car
-      - cat
-      - chair
-      - cow
-      - diningtable
-      - dog
-      - horse
-      - motorbike
-      - person
-      - pottedplant
-      - sheep
-      - sofa
-      - train
-      - tvmonitor
+      config_file:
+        name: yolov2-voc.cfg
+      weight_file:
+        name: yolov2-voc.weights
+      threshold:
+        value: 0.3
+      detection_classes:
+        names:
+          - aeroplane
+          - bicycle
+          - bird
+          - boat
+          - bottle
+          - bus
+          - car
+          - cat
+          - chair
+          - cow
+          - diningtable
+          - dog
+          - horse
+          - motorbike
+          - person
+          - pottedplant
+          - sheep
+          - sofa
+          - train
+          - tvmonitor
