Update package.xml dependencies

--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -10,8 +10,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>boost</depend>
+  <depend>libopencv-dev</depend>
+  <depend>libx11</depend>
 
   <depend>roscpp</depend>
+  <depend>cmake_clang_tools</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>image_transport</depend>
