--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -12,6 +12,7 @@
   <depend>boost</depend>
   <depend>libopencv-dev</depend>
   <depend>libx11</depend>
+  <depend>libxt-dev</depend>
 
   <depend>roscpp</depend>
   <depend>rospy</depend>
