--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -24,6 +24,11 @@
   <depend>message_generation</depend>
   <depend>darknet_ros_msgs</depend>
   <depend>actionlib</depend>
+  <depend>nodelet</depend>
+
+  <export>
+    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+  </export>
 
   <!-- Test dependencies -->
   <test_depend>rostest</test_depend>
