Update and rename cmake.yml to catkin-build.yml

--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -16,4 +16,6 @@ jobs:
     - name: Build
       working-directory: ${{github.workspace}}
       shell: bash
-      run: catkin build -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: |
+        source /opt/ros/noetic/setup.bash
+        catkin build -DCMAKE_BUILD_TYPE=$BUILD_TYPE
