--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -24,6 +24,7 @@ jobs:
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
+        rosdep update
         rosdep install --from-paths src --ignore-src -r -y
 
     - name: catkin build
