--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -27,9 +27,17 @@ jobs:
         rosdep update
         rosdep install --from-paths src --ignore-src -r -y
 
-    - name: catkin build
+    - name: catkin_make
       working-directory: ws
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
         catkin_make -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+
+    - name: catkin_make run_tests
+      working-directory: ws
+      shell: bash
+      run: |
+        source /opt/ros/$ROS_DISTRO/setup.bash
+        catkin_make run_tests
+
