--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -7,20 +7,23 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: ros:melodic
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        path: repo
 
     - name: workspace
+      working-directory: ${{github.workspace}}
       shell: bash
       run: |
-        mkdir -p ./ws/src
-        ln -s ${{github.workspace}} ./ws/src/darknet_ros
+        mkdir -p ${{github.workspace}}/ws/src
+        ln -s ${{github.workspace}}/repo ${{github.workspace}}/ws/src/darknet_ros
 
     - name: rosdep install
-      working-directory: ws
+      working-directory: ${{github.workspace}}/ws
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
@@ -28,14 +31,14 @@ jobs:
         rosdep install --from-paths src --ignore-src -r -y
 
     - name: catkin_make
-      working-directory: ws
+      working-directory: ${{github.workspace}}/ws
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
         catkin_make -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: catkin_make run_tests
-      working-directory: ws
+      working-directory: ${{github.workspace}}/ws
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
