--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -17,6 +17,7 @@ jobs:
 
     - name: rosdep install
       run: |
+        apt-get update
         rosdep update
         rosdep install --from-paths src --ignore-src -r -y
 
