--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: src/darknet_ros 
+        submodules: 'recursive'
 
     - name: rosdep install
       run: |
