--- a/.github/workflows/catkin-build.yml
+++ b/.github/workflows/catkin-build.yml
@@ -13,9 +13,11 @@ jobs:
     steps:
     - name: update git
       run: |
+        apt-get update 
+        apt-get install -y software-properties-common
         add-apt-repository ppa:git-core/ppa
         apt-get update
-        apt-get install git
+        apt-get install -y git
 
     - uses: actions/checkout@v2
       with:
