--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -166,10 +166,6 @@ if (CUDA_FOUND)
   
   ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
-  cuda_add_library(${PROJECT_NAME}_nodelet
-    src/yolo_object_detector_nodelet.cpp
-  )
-
 else()
 
   add_library(${PROJECT_NAME}_core_lib
@@ -186,10 +182,6 @@ else()
     src/yolo_object_detector_node.cpp
   )
   ament_target_dependencies(${PROJECT_NAME} ${dependencies})
-
-  add_library(${PROJECT_NAME}_nodelet
-    src/yolo_object_detector_nodelet.cpp
-  )
 
 endif()
 
@@ -223,17 +215,13 @@ install(
   # FILES_MATCHING PATTERN "*.hpp"
 )
 
-install(DIRECTORY config launch yolo_network_config
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
 # Download yolov2-tiny.weights
 set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
 set(FILE "${PATH}/yolov2-tiny.weights")
 message(STATUS "Checking and downloading yolov2-tiny.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov2-tiny.weights -P ${PATH})
+  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
 endif()
 
 # Download yolov3.weights
@@ -241,7 +229,7 @@ set(FILE "${PATH}/yolov3.weights")
 message(STATUS "Checking and downloading yolov3.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov3.weights -P ${PATH})
+  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
 endif()
 
 install(DIRECTORY yolo_network_config/cfg yolo_network_config/weights DESTINATION share/${PROJECT_NAME}/yolo_network_config/)
@@ -266,7 +254,7 @@ if(BUILD_TESTING)
   message(STATUS "Checking and downloading yolov2.weights if needed ...")
   if (NOT EXISTS "${FILE}")
     message(STATUS "... file does not exist. Downloading now ...")
-    execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov2.weights -P ${PATH})
+    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
   endif()
 
   find_package(ament_lint_auto REQUIRED)
