add cudnn module

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(darknet_ros)
 
+include(CMakeDependentOption)
+
 set(CMAKE_CXX_STANDARD 17)
 
 # Define path of darknet folder here.
@@ -20,12 +22,39 @@ if (CUDA_FOUND)
     CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS};
     -O3
+    -gencode arch=compute_50,code=[sm_50,compute_50]
+    -gencode arch=compute_52,code=[sm_52,compute_52]
+    -gencode arch=compute_61,code=[sm_61,compute_61]
     -gencode arch=compute_75,code=[sm_75,compute_75]
   )
   add_definitions(-DGPU)
-else()
-  list(APPEND LIBRARIES "m")
 endif()
+
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules/" ${CMAKE_MODULE_PATH})
+find_package(CUDNN)
+
+if(CUDNN_FOUND)
+    set(ADDITIONAL_CXX_FLAGS "${ADDITIONAL_CXX_FLAGS} -DCUDNN")
+endif()
+
+# =========================================================
+set(CMAKE_CUDA_ARCHITECTURES 75)
+
+if ( 70 IN_LIST CMAKE_CUDA_ARCHITECTURES OR
+     72 IN_LIST CMAKE_CUDA_ARCHITECTURES OR
+     75 IN_LIST CMAKE_CUDA_ARCHITECTURES OR
+     80 IN_LIST CMAKE_CUDA_ARCHITECTURES OR
+     86 IN_LIST CMAKE_CUDA_ARCHITECTURES)
+  set(ENABLE_CUDNN_HALF "TRUE" CACHE BOOL "Enable CUDNN Half precision" FORCE)
+  message(STATUS "Your setup supports half precision (CUDA_ARCHITECTURES >= 70)")
+else()
+  set(ENABLE_CUDNN_HALF "FALSE" CACHE BOOL "Enable CUDNN Half precision" FORCE)
+  message(STATUS "Your setup does not support half precision (it requires CUDA_ARCHITECTURES >= 70)")
+endif()
+
+# else()
+#   list(APPEND LIBRARIES "m")
+# endif()
 
 # Find X11
 message ( STATUS "Searching for X11..." )
@@ -82,7 +111,6 @@ set(PROJECT_LIB_FILES
 )
 
 set(DARKNET_CORE_FILES
-
     ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c
     ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c
     ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c
@@ -119,12 +147,9 @@ set(DARKNET_CORE_FILES
     ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
     ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
     ${DARKNET_PATH}/src/yolo_layer.c
-    # ${DARKNET_PATH}/src/yolo_v2_class.cpp 
-    # ${DARKNET_PATH}/src/yolo_console_dll.cpp 
 )
 
 set(DARKNET_CUDA_FILES
-
     ${DARKNET_PATH}/src/activation_kernels.cu       ${DARKNET_PATH}/src/avgpool_layer_kernels.cu
     ${DARKNET_PATH}/src/blas_kernels.cu             ${DARKNET_PATH}/src/col2im_kernels.cu
     ${DARKNET_PATH}/src/convolutional_kernels.cu    ${DARKNET_PATH}/src/crop_layer_kernels.cu
@@ -148,18 +173,48 @@ if (CUDA_FOUND)
   
   ament_target_dependencies(${PROJECT_NAME}_lib ${dependencies})
 
-  target_link_libraries(${PROJECT_NAME}_lib
-    cuda
-    cudart
-    cublas
-    curand
-  )
+  if(CUDNN_FOUND)
+    if(ENABLE_CUDNN_HALF)
+      target_link_libraries(${PROJECT_NAME}_lib
+        cuda
+        cudart
+        cublas
+        curand
+        cudnn
+        CuDNN::CuDNN
+      )
+      target_compile_definitions(${PROJECT_NAME}_lib PRIVATE
+        -DCUDNN
+        -DCUDNN_HALF
+      )
+    else()
+      target_link_libraries(${PROJECT_NAME}_lib
+        cuda
+        cudart
+        cublas
+        curand
+        cudnn
+        CuDNN::CuDNN
+      )
+      target_compile_definitions(${PROJECT_NAME}_lib PRIVATE
+        -DCUDNN
+      )
+    endif()
+    
+  else()
+    target_link_libraries(${PROJECT_NAME}_lib
+      cuda
+      cudart
+      cublas
+      curand
+    )
+  endif()
 
   cuda_add_executable(${PROJECT_NAME}
     src/yolo_object_detector_node.cpp
   )
   
-  ament_target_dependencies(${PROJECT_NAME} ${dependencies})
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 else()
 
@@ -207,7 +262,6 @@ install(
   DIRECTORY include/
   DESTINATION include/
   FILES_MATCHING PATTERN "*.h"
-  # FILES_MATCHING PATTERN "*.hpp"
 )
 
 # Download yolov2-tiny.weights
@@ -219,33 +273,41 @@ if (NOT EXISTS "${FILE}")
   execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
 endif()
 
-# Download yolov3.weights
-set(FILE "${PATH}/yolov3.weights")
-message(STATUS "Checking and downloading yolov3.weights if needed ...")
-if (NOT EXISTS "${FILE}")
-  message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
-endif()
+# # Download yolov3.weights
+# set(FILE "${PATH}/yolov3.weights")
+# message(STATUS "Checking and downloading yolov3.weights if needed ...")
+# if (NOT EXISTS "${FILE}")
+#   message(STATUS "... file does not exist. Downloading now ...")
+#   execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
+# endif()
 
-install(DIRECTORY yolo_network_config/cfg yolo_network_config/weights DESTINATION share/${PROJECT_NAME}/yolo_network_config/)
-install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME}/)
-
-# Download yolov4.weights
-set(FILE "${PATH}/yolov4.weights")
-message(STATUS "Checking and downloading yolov4.weights if needed ...")
-if (NOT EXISTS "${FILE}")
-  message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget -q https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights -P ${PATH})
-endif()
+# # Download yolov4.weights
+# set(FILE "${PATH}/yolov4.weights")
+# message(STATUS "Checking and downloading yolov4.weights if needed ...")
+# if (NOT EXISTS "${FILE}")
+#   message(STATUS "... file does not exist. Downloading now ...")
+#   execute_process(COMMAND wget -q https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights -P ${PATH})
+# endif()
 
 
 # Download yolov4-csp.weights
 set(FILE "${PATH}/yolov4-csp.weights")
-message(STATUS "Checking and downloading yolov4.weights if needed ...")
+message(STATUS "Checking and downloading yolov4-csp.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
   execute_process(COMMAND wget -q https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-csp.weights -P ${PATH})
 endif()
+
+# Download yolov4-tiny.weights
+set(FILE "${PATH}/yolov4-tiny.weights")
+message(STATUS "Checking and downloading yolov4-tiny.weights if needed ...")
+if (NOT EXISTS "${FILE}")
+  message(STATUS "... file does not exist. Downloading now ...")
+  execute_process(COMMAND wget -q https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.weights -P ${PATH})
+endif()
+
+install(DIRECTORY yolo_network_config/cfg yolo_network_config/weights DESTINATION share/${PROJECT_NAME}/yolo_network_config/)
+install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME}/)
 
 #############
 ## Testing ##
