--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 # USER SETTINGS =================================================================
 
-set(CUDA_ENABLE OFF)
+set(CUDA_ENABLE ON)
 set(CUDNN_ENABLE OFF) #  set(CUDNN_ENABLE ON)
 set(FP16_ENABLE OFF)
 
