--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -14,8 +14,8 @@ set(FP16_ENABLE ON)
 set(DOWNLOAD_YOLOV2_TINY ON)
 set(DOWNLOAD_YOLOV3 ON)
 set(DOWNLOAD_YOLOV4 ON)
-set(DOWNLOAD_YOLOV4_CSP OFF)
-set(DOWNLOAD_YOLOV4_TINY OFF)
+set(DOWNLOAD_YOLOV4_CSP ON)
+set(DOWNLOAD_YOLOV4_TINY ON)
 set(DOWNLOAD_YOLOV4_MISH OFF)
 
 # Jetson AGX Xavier & TITAN V is under version of Turing. So, please set manually.
@@ -355,7 +355,7 @@ if(DOWNLOAD_YOLOV4_CSP)
   message(STATUS "Checking and downloading yolov4-csp.weights if needed ...")
   if (NOT EXISTS "${FILE}")
     message(STATUS "... file does not exist. Downloading now ...")
-    execute_process(COMMAND wget -q https://raw.githubusercontent.com/AlexeyAB/darknet/master/cfg/yolov4-csp.cfg -P ${PATH}/../cfg)
+    # execute_process(COMMAND wget -q https://raw.githubusercontent.com/AlexeyAB/darknet/master/cfg/yolov4-csp.cfg -P ${PATH}/../cfg)
     execute_process(COMMAND wget -q https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-csp.weights -P ${PATH})
   endif()
   message(STATUS "Done.")
