--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -12,9 +12,9 @@ set(CUDNN_ENABLE ON) #  set(CUDNN_ENABLE ON)
 set(FP16_ENABLE ON)
 
 set(DOWNLOAD_YOLOV2_TINY ON)
-set(DOWNLOAD_YOLOV3 ON)
+set(DOWNLOAD_YOLOV3 OFF)
 set(DOWNLOAD_YOLOV4 ON)
-set(DOWNLOAD_YOLOV4_CSP ON)
+set(DOWNLOAD_YOLOV4_CSP OFF)
 set(DOWNLOAD_YOLOV4_TINY ON)
 set(DOWNLOAD_YOLOV4_MISH OFF)
 
